--- a/style.css
+++ b/style.css
@@ -29,7 +29,9 @@
 
 
 /*================= REUTILIZABLE =======================*/
-
+h1{
+    font-size: 2.5rem;
+}
 h2{
     font-size: var(--font--size--h2);
 }
@@ -48,6 +50,10 @@ i{
 .info_title{
     font-size: var(--size--title);
     font-weight: bold;
+}
+a{
+    text-decoration: none;
+    color: black;
 }
 
 /*================= MEDIA QUERY REUTILIZABLE =======================*/
@@ -401,13 +407,17 @@ select::-ms-expand {
 
 .img_1{
     height: 200px;
-    background-color: #5c6664;
-    border-radius: 10px;
-    margin: 15px 10px 10px 10px;
+}
+
+.img_1 .img__fondo{
+    width: 100%;
+    object-fit: cover;
+    border-radius: 5px 5px 0px 0px;
 }
 
 .info_tittle{
     margin: 0px 10px 10px 10px;
+    
 }
 
 
